tests/negative/lexer/string_byte2.orng
fn main() -> Int {
    let x = "\x0Z" // This is invalid because the second character of 0Z is not a valid hex digit
    0
}